--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<!-- <nav class="navbar navbar-default">
   <div class="container-fluid">
     <ul class="nav navbar-nav">
       <li>
@@ -13,7 +13,5 @@
       </li>
     </ul>
   </div>
-</nav>
-<div class="container">
+</nav> -->
   <router-outlet></router-outlet>
-</div>
