--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,4 @@
-.login_form{
+/*.login_form{
 	margin: 0 auto;
 	width: 40%;
 	border: 1px solid;
@@ -10,4 +10,47 @@
 	display: inline-block;
 	margin-top: 10px;
 	border-radius: 3px;
-}
+	}*/
+	.background-image{
+		width: 100vw;
+		height: 100%;
+		overflow-y: hidden;
+		overflow-x: hidden;
+	}
+	.background-image img{
+		object-fit: cover;
+		max-width: 100%;
+		max-width: 100%;
+		min-width: 100%;
+		object-position: center;
+		opacity: 0.6;
+	}
+	.content{
+		position: absolute;
+		background: rgb(0, 0, 0); 
+		background: rgba(255, 255, 255, 0.61); 
+		color: #f1f1f1;
+		width: 100%;
+		padding: 20px;
+		z-index: 11;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		margin: auto;
+		width: 500px;
+		height: 555px;
+		border-radius: 10px;
+
+	}
+	.example-full-width {
+		width: 100%;
+		max-width: 350px;
+	}
+	.form_inputs{
+		padding: 40px;
+		text-align: center;
+	}
+	button{
+		margin-top: 15px;
+	}
