--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,6 +1,43 @@
-.login_form{
-	margin: 0 auto;
-	width: 40%;
-	border: 1px solid;
-	padding: 32px
+.background-image{
+	width: 100vw;
+	height: 100%;
+	overflow-y: hidden;
+	overflow-x: hidden;
+}
+.background-image img{
+	object-fit: cover;
+	max-width: 100%;
+	max-width: 100%;
+	min-width: 100%;
+	object-position: center;
+	opacity: 0.6;
+}
+.content{
+	position: absolute;
+	background: rgb(0, 0, 0); 
+	background: rgba(255, 255, 255, 0.61); 
+	color: #f1f1f1;
+	width: 100%;
+	padding: 20px;
+	z-index: 11;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	width: 400px;
+	height: 400px;
+	border-radius: 10px;
+
+}
+.example-full-width {
+	width: 100%;
+	max-width: 250px;
+}
+.form_inputs{
+	padding: 40px;
+	text-align: center;
+}
+button{
+	margin-top: 15px;
 }
