--- a/src/app/display-data/display-data.component.html
+++ b/src/app/display-data/display-data.component.html
@@ -8,33 +8,23 @@
 	<div class="title" style="padding: 45px 0px;">
 		<h4 class="text-center"> Task List</h4>
 	</div>
-	
-	<mat-card class="example-card">
-		<mat-card-header>
-			<div mat-card-avatar class="example-header-image"></div>
-			<mat-card-title>Shiba Inu</mat-card-title>
-			<mat-card-subtitle>Dog Breed</mat-card-subtitle>
-		</mat-card-header>
-		<mat-card-content>
-		</mat-card-content>
-		<mat-card-actions>
-			<button mat-button>LIKE</button>
-			<button mat-button>SHARE</button>
-		</mat-card-actions>
-	</mat-card>
-
-	<span class="hover-cursor text-danger pull-right">
-
-		<span class="hover-cursor text-danger pull-right" style="margin-left: 50px;">
-
-		</span>
-		<span>
-			<button class="btn btn-default" (click)="deleteTask(item.uid)">delete</button>
-		</span>
-	</li>
-</ul>
-</div>
-
-</div> 
+	<!-- <div class="board" cdkDropList [cdkDropListData]="taskArray" (cdkDropListDropped)="onTrackDrop($event)" cdkDropListOrientation="horizontal">
+		<div class="card-list-content" cdkDropList [id]="taskArray.id" [cdkDropListData]="taskArray"
+		[cdkDropListConnectedTo]="trackIds" (cdkDropListDropped)="onTalkDrop($event)"> -->
+		<mat-card class="example-card" *ngFor="let task of taskArray">
+			<mat-card-header>
+				<div mat-card-avatar class="example-header-image" ></div>
+				<mat-card-title>{{task.title}}</mat-card-title>
+				<mat-card-subtitle>{{task.priority}}</mat-card-subtitle>
+			</mat-card-header>
+			<mat-card-content>{{task.desc}}
+			</mat-card-content>
+			<mat-card-actions>
+				<button mat-button>Delete</button>
+				<button mat-button>Update</button>
+			</mat-card-actions>
+		</mat-card>
+	<!-- </div>
+	</div> -->
 </body>
 
