--- a/src/app/display-data/display-data.component.html
+++ b/src/app/display-data/display-data.component.html
@@ -8,19 +8,15 @@
 	<div class="title" style="padding: 45px 0px;">
 		<h4 class="text-center"> Task List</h4>
 	</div>
-
 	<mat-card class="example-card">
 		<mat-card-header>
 			<div mat-card-avatar class="example-header-image"></div>
-			<mat-card-title>Shiba Inu</mat-card-title>
-			<mat-card-subtitle>Dog Breed</mat-card-subtitle>
+			<mat-card-title>Task Header</mat-card-title>
+			<mat-card-subtitle>Task Description</mat-card-subtitle>
 		</mat-card-header>
 		<mat-card-content>
+			<!-- content here -->
 		</mat-card-content>
-		<mat-card-actions>
-			<button mat-button>LIKE</button>
-			<button mat-button>SHARE</button>
-		</mat-card-actions>
 	</mat-card>
 	<!-- <div class="container">
 		<div class="task_list">
