--- a/src/app/display-data/display-data.component.html
+++ b/src/app/display-data/display-data.component.html
@@ -8,23 +8,55 @@
 	<div class="title" style="padding: 45px 0px;">
 		<h4 class="text-center"> Task List</h4>
 	</div>
-	<!-- <div class="board" cdkDropList [cdkDropListData]="taskArray" (cdkDropListDropped)="onTrackDrop($event)" cdkDropListOrientation="horizontal">
-		<div class="card-list-content" cdkDropList [id]="taskArray.id" [cdkDropListData]="taskArray"
-		[cdkDropListConnectedTo]="trackIds" (cdkDropListDropped)="onTalkDrop($event)"> -->
-		<mat-card class="example-card" *ngFor="let task of taskArray">
-			<mat-card-header>
-				<div mat-card-avatar class="example-header-image" ></div>
-				<mat-card-title>{{task.title}}</mat-card-title>
-				<mat-card-subtitle>{{task.priority}}</mat-card-subtitle>
-			</mat-card-header>
-			<mat-card-content>{{task.desc}}
-			</mat-card-content>
-			<mat-card-actions>
-				<button mat-button>Delete</button>
-				<button mat-button>Update</button>
-			</mat-card-actions>
-		</mat-card>
-	<!-- </div>
-	</div> -->
+	<div class="example-container">
+		<div cdkDropList #todoList="cdkDropList" [cdkDropListData]="tracks" 
+		[cdkDropListConnectedTo]="[doneList]"
+		class="example-list"
+		(cdkDropListDropped)="drop($event)">
+		<div class="example-box" *ngFor="let task of taskArray" cdkDrag>
+			<mat-card class="example-card" >
+				<mat-card-header>
+					<div mat-card-avatar class="example-header-image" ></div>
+					<mat-card-title>{{task.title}}</mat-card-title>
+					<mat-card-subtitle >{{task.priority}}</mat-card-subtitle>
+				</mat-card-header>
+				<mat-card-content>{{task.desc}}
+				</mat-card-content>
+				<mat-card-actions>
+					<button mat-button>Delete</button>
+					<button mat-button>Update</button>
+				</mat-card-actions>
+			</mat-card>
+		</div>
+	</div>
+</div>
 </body>
+
+<!-- <div class="example-container">
+  <h2>To do</h2>
+
+  <div
+    cdkDropList
+    #todoList="cdkDropList"
+    [cdkDropListData]="todo"
+    [cdkDropListConnectedTo]="[doneList]"
+    class="example-list"
+    (cdkDropListDropped)="drop($event)">
+    <div class="example-box" *ngFor="let item of taskArray" cdkDrag>{{item}}</div>
+  </div>
+</div>
+
+<div class="example-container">
+  <h2>Done</h2>
+  <div
+    cdkDropList
+    #doneList="cdkDropList"
+    [cdkDropListData]="done"
+    [cdkDropListConnectedTo]="[todoList]"
+    class="example-list"
+    (cdkDropListDropped)="drop($event)">
+    <div class="example-box" *ngFor="let item of done" cdkDrag>{{item}}</div>
+  </div>
+</div> -->
+
 
